[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[dependencies]
anchor-lang = "0.32.1"
# Pinning these specifically prevents the 1.76+ toml_parser from being pulled in
toml_edit = "=0.21.1"
toml_parser = "=0.1.0"